Fix spacing in comment creator

--- a/ui/scss/component/_comment-create.scss
+++ b/ui/scss/component/_comment-create.scss
@@ -12,7 +12,7 @@ $thumbnailWidthSmall: 1rem;
   position: relative;
 
   .section {
-    margin-top: var(--spacing-m);
+    margin-top: var(--spacing-s);
   }
 
   .button--file-action {
